has bug in get-branch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <button class="btn btn-primary" (click)="loadCars()">Загрузить машины</button>
   <hr>
   <ul class="list-group">
-
+    <li class="list-group-item" *ngFor="let car of cars">
+      <span class="badge">{{car.id}}</span> {{car.name}} ({{car.color}})
+    </li>
   </ul>
 </div>
